<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmsLab</string>
    <string name="action_settings">Settings</string>
    <string name="title">Change your Twitter Status</string>
    <string name="placeholder">tweet goes here.</string>
    <string name="prompt">To post in</string>
    <string name="prompt2">seconds</string>
    <string name="placeholder2">5</string>
    <string name="button">Submit</string>
    <string name="clear">Clear</string>

</resources>
